# pyreqpp

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml  publish.yml
pyreqpp/: __init__.py  __main__.py  cli.py
pyreqpp/utils/: __init__.py  run.py
scripts/: run.sh
tests/: requirements.txt
